# GL_TD_Cor_IMAC1

./: .gitignore  CMakeLists.txt  README.md
TD01/: CMakeLists.txt  ex02.cpp  ex03.cpp  ex04.cpp
TD02/: CMakeLists.txt  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp
TD03/: ex01.cpp  ex02.cpp
TD04/: draw_scene.cpp  draw_scene.hpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp
TD05/: draw_scene.cpp  draw_scene.hpp  ex01.cpp
TD05_ex4/: CMakeLists.txt  draw_scene.cpp  draw_scene.hpp  ex04.cpp
assets/: train.json
assets/shaders/: flat_shading.frag  flat_shading_2D.vert  flat_shading_3D.vert  phong_shading.frag  phong_shading.vert
src/helpers/: RootDir.hpp.in
